--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://natessaw.github.io/shipments-CRUD-page/",
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-inlinesvg": "^3.0.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
