--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://natessaw.github.io/shipments-CRUD-page/",
+  "homepage": "https://natessaw.github.io/shipments-CRUD/",
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
