--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^1.3.4",
     "json-loader": "^0.5.7",
     "nanoid": "^4.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-inlinesvg": "^3.0.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
