--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajax": "^0.0.4",
     "axios": "^1.3.4",
+    "bootstrap-icons": "^1.10.5",
     "json-loader": "^0.5.7",
     "nanoid": "^4.0.1",
     "normalize.css": "^8.0.1",
