--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-loader": "^0.5.7",
     "nanoid": "^4.0.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-inlinesvg": "^3.0.2",
